--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,12 +1,22 @@
 name: Deploy DEV to VPS
+
 on:
   push:
     branches: ["dev"]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Add VPS host to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ vars.VPS_HOST }} >> ~/.ssh/known_hosts
+          chmod 700 ~/.ssh
+          chmod 600 ~/.ssh/known_hosts
+
       - name: Deploy via SSH to VPS
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -15,16 +25,34 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             set -e
+
+            # ==== Charger NVM pour avoir node/npm dans le PATH ====
+            export NVM_DIR="\$HOME/.nvm"
+            if [ -s "\$NVM_DIR/nvm.sh" ]; then
+              . "\$NVM_DIR/nvm.sh"
+              nvm use --lts >/dev/null 2>&1 || nvm use >/dev/null 2>&1 || true
+            fi
+
+            echo "Node version: \$(node -v || echo 'not found')"
+            echo "NPM version: \$(npm -v  || echo 'not found')"
+
             APP_DIR=/home/adminio/htdocs/lapsi.online
             PROC_NAME=piopi-dev
             PORT=3001
-            cd $APP_DIR
+
+            cd \$APP_DIR
             git fetch origin dev
             git reset --hard origin/dev
+
             npm ci
             npm run build
-            which serve || npm install -g serve pm2
-            pm2 delete $PROC_NAME || true
-            pm2 start "serve -s ./dist -l $PORT" --name $PROC_NAME
+
+            # Installation PM2 et Serve si absents
+            if ! command -v pm2 >/dev/null 2>&1; then npm i -g pm2; fi
+            if ! command -v serve >/dev/null 2>&1; then npm i -g serve; fi
+
+            pm2 delete \$PROC_NAME || true
+            pm2 start "serve -s ./dist -l \$PORT" --name \$PROC_NAME
             pm2 save
+
             sudo nginx -t && sudo systemctl reload nginx
