--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -25,10 +25,23 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             set -e
-            export PATH=/usr/bin:/usr/local/bin:$PATH
 
-            echo "Node version: $(node -v)"
-            echo "NPM version: $(npm -v)"
+            # ==== Charger NVM pour avoir node/npm dans le PATH (shell non interactif) ====
+            export NVM_DIR="$HOME/.nvm"
+            if [ -s "$NVM_DIR/nvm.sh" ]; then
+              . "$NVM_DIR/nvm.sh"
+              # utilise la LTS si dispo, sinon la dernière utilisée
+              nvm use --lts >/dev/null 2>&1 || nvm use >/dev/null 2>&1 || true
+            fi
+
+            # Fallback: ajoute chemins systèmes au cas où
+            export PATH="/usr/local/bin:/usr/bin:$PATH"
+
+            echo "PATH  : $PATH"
+            echo "which node: $(which node || echo 'not found')"
+            echo "which npm : $(which npm  || echo 'not found')"
+            echo "Node version: $(node -v || echo 'not found')"
+            echo "NPM  version: $(npm -v  || echo 'not found')"
 
             APP_DIR=/home/adminio/htdocs/lapsi.online
             PROC_NAME=piopi-dev
@@ -39,18 +52,19 @@ jobs:
               exit 1
             fi
 
-            cd $APP_DIR
+            cd "$APP_DIR"
             git fetch origin dev
             git reset --hard origin/dev
 
             npm ci
             npm run build
 
+            # PM2 / serve (install si absents)
             if ! command -v pm2 >/dev/null 2>&1; then npm i -g pm2; fi
             if ! command -v serve >/dev/null 2>&1; then npm i -g serve; fi
 
-            pm2 delete $PROC_NAME || true
-            pm2 start "serve -s ./dist -l $PORT" --name $PROC_NAME
+            pm2 delete "$PROC_NAME" || true
+            pm2 start "serve -s ./dist -l $PORT" --name "$PROC_NAME"
             pm2 save
 
             sudo nginx -t && sudo systemctl reload nginx
