--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -26,31 +26,19 @@ jobs:
           script: |
             set -e
 
-            # ==== Charger NVM pour avoir node/npm dans le PATH (shell non interactif) ====
+            # Charger NVM si présent (shell non interactif)
             export NVM_DIR="$HOME/.nvm"
             if [ -s "$NVM_DIR/nvm.sh" ]; then
               . "$NVM_DIR/nvm.sh"
-              # utilise la LTS si dispo, sinon la dernière utilisée
               nvm use --lts >/dev/null 2>&1 || nvm use >/dev/null 2>&1 || true
             fi
 
-            # Fallback: ajoute chemins systèmes au cas où
             export PATH="/usr/local/bin:/usr/bin:$PATH"
-
-            echo "PATH  : $PATH"
-            echo "which node: $(which node || echo 'not found')"
-            echo "which npm : $(which npm  || echo 'not found')"
-            echo "Node version: $(node -v || echo 'not found')"
-            echo "NPM  version: $(npm -v  || echo 'not found')"
+            echo "Node: $(node -v) | NPM: $(npm -v)"
 
             APP_DIR=/home/adminio/htdocs/lapsi.online
             PROC_NAME=piopi-dev
             PORT=3001
-
-            if [ ! -d "$APP_DIR" ]; then
-              echo "❌ Erreur: le dossier $APP_DIR n'existe pas sur le VPS"
-              exit 1
-            fi
 
             cd "$APP_DIR"
             git fetch origin dev
@@ -59,12 +47,13 @@ jobs:
             npm ci
             npm run build
 
-            # PM2 / serve (install si absents)
-            if ! command -v pm2 >/dev/null 2>&1; then npm i -g pm2; fi
-            if ! command -v serve >/dev/null 2>&1; then npm i -g serve; fi
+            # PM2 / serve
+            command -v pm2 >/dev/null 2>&1 || npm i -g pm2
+            command -v serve >/dev/null 2>&1 || npm i -g serve
 
             pm2 delete "$PROC_NAME" || true
             pm2 start "serve -s ./dist -l $PORT" --name "$PROC_NAME"
             pm2 save
 
-            sudo nginx -t && sudo systemctl reload nginx
+            # Pas de reload nginx en DEV
+            echo "Skip nginx reload (not needed for dev)"
