--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -24,9 +24,26 @@ jobs:
             PROC_NAME=piopi-prod
             PORT=3001
 
-            # utiliser Node/NPM système pour éviter les soucis PATH
-            which node
-            which npm
+            # initialiser nvm si disponible pour que node/npm soient dans le PATH
+            export NVM_DIR="$HOME/.nvm"
+            if [ -s "$NVM_DIR/nvm.sh" ]; then
+              . "$NVM_DIR/nvm.sh"
+            elif [ -s "/usr/local/nvm/nvm.sh" ]; then
+              . "/usr/local/nvm/nvm.sh"
+            elif [ -s "/opt/nvm/nvm.sh" ]; then
+              . "/opt/nvm/nvm.sh"
+            fi
+
+            if ! command -v node >/dev/null 2>&1; then
+              echo "Node.js introuvable dans le PATH" >&2
+              exit 1
+            fi
+
+            if ! command -v npm >/dev/null 2>&1; then
+              echo "npm introuvable dans le PATH" >&2
+              exit 1
+            fi
+
             node -v
             npm -v
 
