--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit -p tsconfig.app.json"
+    "typecheck": "tsc --noEmit -p tsconfig.app.json",
+    "test": "echo \"No automated tests are configured for this project\"",
+    "start:prod": "node scripts/serve-dist.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
